--- a/addDiscount.html
+++ b/addDiscount.html
@@ -248,7 +248,7 @@
                 <div class="form-group">
                     <div class="col-md-11">
                         <!--                                  تعویض تاریخ-->
-                        <input type="date" required autofocus value="" name="expireDate"
+                        <input type="date" required value="" name="expireDate"
                                class="form-control w3-margin pictureInput"
                                id="addDiscount-form-expireDate-inp" accept="application/txt">
                         <label> تاریخ انقضا </label>
