--- a/showShop.html
+++ b/showShop.html
@@ -145,7 +145,9 @@
                     <br />
 
 
-                    <button class="btn btnColors" id="showShop-btn"> ویرایش اطلاعات<button/>
+                    <button class="btn btn-default btnColors" id="showShop-btn">
+                        ویرایش اطلاعات
+                    </button>
 
 <!--                    <div class="form-group">-->
 <!--                        <div class="col-md-offset-7 col-md-11">-->
