[some test for csrf]

--- a/testcsrf.html
+++ b/testcsrf.html
@@ -27,7 +27,7 @@
 <form method="post" id="login-form">
     <div>
         <div >
-            <img src="" id="login-form-img-inp" >
+            <img class="w3-circle" src="" id="login-form-img-inp" >
             <input type="submit" value="ذخیره"
                    id="login-form-submit-btn" />
         </div>
@@ -43,7 +43,7 @@
         $("#login-form").submit(function (e) {
 
             var formData = new FormData();
-            formData.append("email", "ghazalarab@gmail.com");
+            formData.append("email", "sabaarab4@gmail.com");
             formData.append("password", "123456");
 
             e.preventDefault();
